<resources>
    <string name="app_name">Test</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="at_your_in_group">%s @ you in group chat</string>
    <string name="emojicon_test_name">Test</string>
    <string name="net_break">您的网络已断开</string>
    <string name="sever_break">抱歉,服务器连接失败,请稍后再试</string>
    <string name="exit_app">再按一次，退出应用</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="camera">相机</string>
    <string name="phone_dcim">手机相册</string>
    <string name="no_sdcard">未检测到SD卡</string>
    <string name="viewpager_indicator">%1$d/%2$d</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间:</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="header_hint_refresh_normal">下拉刷新</string>
    <string name="header_hint_refresh_ready">松开刷新数据</string>
    <string name="header_hint_refresh_loading">正在加载...</string>
    <string name="header_hint_refresh_time">上次更新时间:</string>
    <string name="footer_hint_load_normal">查看更多</string>
    <string name="footer_hint_load_ready">松开载入更多</string>
    <string name="header_refresh_time">刚刚</string>
    <string name="login">登录</string>
    <string name="take_look">先看一看</string>
    <string name="input_phonenum_hint">请输入手机号</string>
    <string name="input_pwd_hint">请输入密码</string>
    <string name="login_remember_pwd">记住密码</string>
    <string name="forget_pwd">忘记密码？</string>
    <string name="login_str">正在登录...请稍候</string>
    <string name="login_username_empty">用户名不能为空</string>
    <string name="login_password_empty">密码不能为空</string>
    <string name="input_checkcode_hint">请输入验证码</string>
    <string name="phone_empty">手机号不能为空</string>
    <string name="checkcode_empty">验证码不能为空</string>
    <string name="checkcode_wrong">验证码输入有误</string>
    <string name="password_length_alert">密码长度为6~20位!</string>
    <string name="register_repassword_empty">确认密码不能为空</string>
    <string name="password_different">两次密码输入不一致</string>
    <string name="reg_onestep_realnameinput">请输入您的真实姓名</string>
    <string name="reg_onestep_picknameinput">请设置您的昵称</string>
    <string name="realname_empty_alert">姓名不能为空</string>
    <string name="register_success">注册成功</string>
    <string name="update_password_success">修改密码成功</string>
    <string name="agree_protocol">您还未同意《服务协议》</string>
    <string name="photo_requred">1.免冠，建议使用素颜照，保证五官清晰可见；\n2.照片放大后，证件上的文字信息与证件号清楚可见；\n3.手持证件拍照，不要遮挡证件上的任何信息；\n4.大小不要超过10M.</string>
    <string name="photo_requred_other">请提交能证明你专业水平的证件照片\n保持照片中的有效信息清晰可见</string>
    <string name="string_state_ready">READY</string>
    <string name="string_state_preparing">PREPARING</string>
    <string name="string_state_connecting">CONNECTING</string>
    <string name="string_state_streaming">STREAMING</string>
    <string name="string_state_netblocking">NETBLOCKING, STOPPING</string>
    <string name="string_state_con_timeout">CONNECTION TIMEOUT</string>
    <string name="buy_caibi_tips">温馨提示：1元等于100财币，请在网络良好的情况下进行充值，为了保证充值顺利请耐心等待充值返回，不要进行其他无关操作。</string>
    <string name="tabmine_praise">点赞</string>
    <string name="tabmine_comment">评论</string>
    <string name="tabmine_share">分享</string>
    <string name="tabmine_pointsmall">积分商城</string>
    <string name="tabmine_myreward">我的奖励</string>
    <string name="tabmine_feedback">意见反馈</string>
    <string name="tabmine_prizesetting">奖项设置</string>
    <string name="feedback_hint">亲，您的反馈是我们前进的动力~</string>
    <string name="feedback_text_num">500</string>
    <string name="feedback_commint">提交</string>
    <string name="myreward_hint">输入邀请码</string>
    <string name="myreward_commit">兑换</string>
    <string name="tabmine_inviteteacher">姓名</string>
    <string name="fragment_home_top">包车</string>
    <string name="fragment_home_down">租车</string>
    <string name="register_car">注册车辆</string>
    <string name="mine">我的</string>
    <string name="tabmine_edit">点击编辑个人信息</string>
    <string name="balance_detail">收支明细</string>
    <string name="mine_collection">我的收藏</string>
    <string name="mine_message">我的消息</string>
    <string name="register_driver">注册车辆</string>
    <string name="mine_setting">设置</string>
    <string name="user_details">个人详情</string>
    <string name="rent_car_detail">出租爱车，自由工作</string>
    <string name="charter_car_detail">与您爱车一起，收入更高</string>
    <string name="rent_and_charter">租车+包车</string>
    <string name="rent_and_charter_detail">全能驾驶</string>
    <string name="next1">下一步（1/5）</string>
    <string name="service_type">您想注册什么类型的</string>
    <string name="register_type">汽车服务?</string>
    <string name="city">城市</string>
    <string name="enter_your_city">输入您所在的城市</string>
    <string name="hot_search">热门搜索</string>
    <string name="next2">下一步（2/5）</string>
    <string name="car_info">车辆信息</string>
    <string name="vehicle_add_pic">添加照片</string>
    <string name="vehicle_brand">品牌</string>
    <string name="subvehicle_brand">车辆品牌</string>
    <string name="vehicle_number">车牌号</string>
    <string name="subvehicle_number">车辆的唯一标识</string>
    <string name="vehicle_color">颜色</string>
    <string name="subvehicle_color">让乘客更容易辨识</string>
    <string name="vehicle_max_passengers">最大可乘人数</string>
    <string name="subvehicle_max_passagers">了解载客量</string>
    <string name="next3">下一步（3/5）</string>
    <string name="service_info">服务信息</string>
    <string name="service_write_title">撰写标题</string>
    <string name="subservice_write_title">撰写一个描述您车辆的标题</string>
    <string name="service_writeanoverview">撰写概述</string>
    <string name="subservice_writeanoverview">总结您的服务特点</string>
    <string name="service_setprice">设置价格</string>
    <string name="subservice_setprice">提供租车服务,必须提供取车地址</string>
    <string name="service_languageinfo">语言信息</string>
    <string name="subservice_languageinfo">更方便交流</string>
    <string name="service_otherinfo">其他信息</string>
    <string name="subservice_otherinfo">提供更加方便的乘坐交流</string>
    <string name="next4">下一步（4/5）</string>
    <string name="materials_certification">资料认证</string>
    <string name="price">价格</string>
    <string name="label_send_capchar_tip">我们已经将六位数验证码发送到\n手机。请在下方输入:</string>
    <string name="obtain_capchar_again">再次发送</string>
    <string name="wintitle_newpw">设定新密码</string>
    <string name="sans_serif">sans-serif</string>
    <string name="no_network">无网络</string>
    <string name="journey_going">将至订单</string>
    <string name="journey_ago">过往订单</string>
    <string name="full_day">全天</string>
    <string name="member">位乘客</string>
    <string name="car_type_rent">出租</string>
    <string name="car_type_bao">包车</string>
    <string name="order_time_contact">至</string>
    <string name="add">添加</string>
    <string name="chartered">包车</string>
    <string name="date">日期</string>
    <string name="passenger">乘客</string>
    <string name="language">语言</string>
    <string name="other_infomation">其他信息</string>
    <string name="reset">重置</string>
    <string name="submit">提交</string>
    <string name="serach_car">查看车源</string>
    <string name="rent">租车</string>
    <string name="modify">修改</string>
    <string name="language_info">语言信息</string>
    <string name="can_select_multiple_items">可以同时选择多项</string>
    <string name="save">保存</string>
    <string name="chartered_and_rent">包租车</string>
    <string name="seat">"座 "</string>
    <string name="congratulations_submission_success">恭喜,提交成功!</string>
    <string name="progress">"进度 "</string>
    <string name="sorry_the_network_exception">抱歉,网络异常!</string>
    <string name="your_account_is_deleted">您的账号被删除</string>
    <string name="resend">再次发送</string>
    <string name="please_enter_below">请在下方输入</string>
    <string name="not_a_phone_number_enter_the_correct_phone_number">不是电话号码请输入正确的电话号码</string>
    <string name="logging_in">正在登录...</string>
    <string name="if_the_account_information_is_abnormal_please_contact_the_administrator">账户信息异常,未绑定环信用户,请联系后台管理人员</string>
    <string name="passport">护照</string>
    <string name="id_card">身份证</string>
    <string name="uploaded_successfully">上传成功</string>
    <string name="failed_please_try_again">失败请重试</string>
    <string name="title_is_empty">title为空</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="days">日</string>
    <string name="update_completed">更新成功</string>
    <string name="update_failed">更新失败</string>
    <string name="edit_your_resume">编辑你的简历</string>
    <string name="please_upload_pictures">请上传图片</string>
    <string name="order_detail_confim">确认订单</string>
    <string name="order_detail_comment">评价</string>
    <string name="order_detail_done_comment">已评价</string>
    <string name="order_apply_refund">申请退款</string>
    <string name="order_apply_refund_going">退款中</string>
    <string name="order_apply_refund_done">已退款</string>
    <string name="order_apply_refund_dis">已拒绝退款</string>
    <string name="refund_agree">同意退款</string>
    <string name="refund_disagree">不同意退款</string>
    <string name="order_book">预定</string>
    <string name="order_id">订单号:</string>
    <string name="order_rendai">人座</string>
    <string name="order_user">车主:</string>
    <string name="order_detial">详情</string>
    <string name="order_fee">预订费用</string>
    <string name="order_dopist">参考押金</string>
    <string name="order_route">路线</string>
    <string name="order_route_see">查看</string>
    <string name="day">天</string>
    <string name="deposit_title">向您退还押金</string>
    <string name="deposit_fee">车辆押金</string>
    <string name="deposit_return">退还金额</string>
    <string name="deposit_des">扣款说明</string>
    <string name="deposit_going">押金退还中</string>
    <string name="deposit_refuse">卖家拒绝了退还押金</string>
    <string name="deposit_me_refuse">用户已拒绝</string>
    <string name="deposit_is_confirm">是否确认订单</string>
    <string name="deposit_done">已确认，订单完成</string>
    <string name="order_detial_title">订单详情</string>
    <string name="refund_fee">应付金额</string>
    <string name="refund_back_fee">应退金额</string>
    <string name="refund_reseaon">申请退款</string>
    <string name="refund_des">退款说明</string>
    <string name="refund_title">经核实符合退款规则，退款将于7-15个工作日退还至您的支付账户</string>
    <string name="refund_rule">退款规则</string>
    <string name="select_refund_reseaon">请选择退款规则*</string>
    <string name="refund_des_fill">退款说明(选填)</string>
    <string name="refund_editl">编辑</string>
    <string name="phone_confirm">电话认证</string>
    <string name="authentication">身份认证</string>
    <string name="so_that_passengers_more_believe_your_identity">让乘客更加相信您的身份</string>
    <string name="not_submitted_for_review">未提交审核</string>
    <string name="complete5">完成(5/5)</string>
    <string name="under_review">已提交审核</string>
    <string name="has_been_submitted_for_review">已经提交审核</string>
    <string name="has_been_certified">已经审核成功</string>
    <string name="passager">乘客</string>
    <string name="please_complete_the_information">请完善信息</string>
    <string name="please_select_your_city">请选择所在城市</string>
    <string name="network_is_not_good_please_try_again">网络不好请重试</string>
    <string name="registe_tuktuk_brand_fill_tuktuk">如果您注册Tuk-tuk的车辆，品牌请填写Tuk-tuk</string>
    <string name="registe_tuktuk_number_can_be_null">如果您注册Tuk-tuk的车辆，车牌号可不填</string>
    <string name="minimum_number_of_days">请输最少租赁天数</string>
    <string name="complete">完成</string>
    <string name="refund_fee_all">全额退还</string>
    <string name="refund_fee_part">部分退还</string>
    <string name="refund_fee_back">Part refund</string>
    <string name="refund_detail">退费详情</string>
    <string name="Please_enter_the_phone_number">请输入手机号码</string>
    <string name="sign_in">注册账号</string>
    <string name="forget_password">忘记密码</string>
</resources>