<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="#ffffff">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="登录"
            android:textColor="@color/white"
            android:textSize="16.5dp" />
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="100dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/code"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="+86"
            android:textColorHint="#9F9F9F"
            android:textSize="26dp" />

        <View
            android:layout_width="0.6dp"
            android:layout_height="35dp"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:background="#dfe0df" />
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            app:hintEnabled="true"
            android:hint="@string/Please_enter_the_phone_number"
            android:layout_height="match_parent">
            <EditText
                android:id="@+id/login_phonenumber"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:gravity="left|center"
                android:maxLength="15"
                android:paddingLeft="10dp"
                android:textColorHint="#BFBFC6"
                android:textSize="15dp" />
        </android.support.design.widget.TextInputLayout>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="#dfe0df" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">
<android.support.design.widget.TextInputLayout
    app:hintEnabled="true"
    android:hint="@string/input_pwd_hint"
    app:passwordToggleEnabled="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@null"

        android:inputType="textPassword"
        android:maxLength="20"
        android:paddingLeft="30dp"
        android:textColorHint="#BFBFC6"
        android:textSize="15dp" />

</android.support.design.widget.TextInputLayout>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:background="#dfe0df" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/login_btn"
            android:layout_width="335dp"
            android:layout_height="44dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_button_corner"
            android:text="@string/login"
            android:textColor="#FFFFFF"
            android:textSize="16dp" />

    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/login_register"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="30dp"
            android:gravity="center"
            android:text="@string/sign_in"
            android:textColor="#FE6813"
            android:textSize="13dp" />

        <TextView
            android:id="@+id/login_forgetpassword"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="28dp"
            android:layout_marginStart="28dp"
            android:gravity="center"
            android:text="@string/forget_password"
            android:textColor="#858D90"
            android:textSize="13dp" />
    </RelativeLayout>
</LinearLayout>